<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/light_gray">

        <LinearLayout
            android:id="@+id/main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            tools:context=".screens.productView.ProductViewScreen">


            <ProgressBar
                android:id="@+id/progressBar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="200dp"
                android:indeterminateTint="@color/dark_gray"
                android:visibility="gone"
                app:indicatorColor="@color/dark_gray"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="@+id/books"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="@id/main"
                app:trackColor="#A8000000"
                tools:visibility="gone" />

            <LinearLayout
                android:id="@+id/frame"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:visibility="gone">

                <FrameLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:visibility="visible">

                    <ImageView
                        android:id="@+id/img_product"
                        android:layout_width="match_parent"
                        android:layout_height="380dp"
                        android:layout_margin="10dp"
                        android:background="@drawable/rounded_image"
                        android:contentDescription="@string/product_image"
                        android:src="@drawable/loader" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="bottom|end"
                        android:layout_marginEnd="20dp"
                        android:layout_marginBottom="20dp"
                        android:background="@drawable/rating_bg"
                        android:gravity="center_vertical"
                        android:paddingHorizontal="8dp">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="7dp"
                            android:contentDescription="@string/ratings_reviews"
                            android:src="@drawable/ic_star" />

                        <TextView
                            android:id="@+id/txt_rating"
                            android:layout_width="wrap_content"
                            android:layout_height="match_parent"
                            android:text="@string/rating"
                            android:textColor="@color/dark_gray"
                            android:textSize="18sp" />
                    </LinearLayout>

                </FrameLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginHorizontal="15dp"
                    android:orientation="vertical"
                    android:paddingHorizontal="10dp">


                    <TextView
                        android:id="@+id/txt_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/title"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray"
                        android:textSize="24sp"
                        android:textStyle="bold" />


                    <TextView
                        android:id="@+id/txt_brand"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginBottom="10dp"
                        android:text="@string/brand"
                        android:textAlignment="center"
                        android:textColor="@color/dark_gray" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <TextView
                            android:id="@+id/txt_discount"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginEnd="6dp"
                            android:text="@string/dis"
                            android:textColor="@color/red"
                            android:textSize="20sp" />

                        <TextView
                            android:id="@+id/txt_price"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/price"
                            android:textColor="@color/dark_gray"
                            android:textSize="20sp" />

                    </LinearLayout>


                    <TextView
                        android:id="@+id/txt_return"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/return_policy"
                        android:textColor="@color/dark_gray"
                        android:textSize="13sp" />

                    <TextView
                        android:id="@+id/txt_min_order"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/order_quantity"
                        android:textColor="@color/dark_gray"
                        android:textSize="12sp" />

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginVertical="15dp"
                        android:background="@drawable/des_bg"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Description"
                            android:textColor="@color/black"
                            android:textSize="17sp"
                            android:textStyle="bold" />

                        <TextView
                            android:id="@+id/txt_description"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/description"
                            android:textColor="@color/dark_gray"
                            android:textSize="16sp" />


                    </LinearLayout>


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingHorizontal="15dp"
                    android:text="@string/ratings_reviews"
                    android:textColor="@color/black"
                    android:textSize="20sp" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/rvReviewList"
                    android:layout_width="match_parent"
                    android:layout_height="250dp"
                    android:layout_margin="5dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</layout>